# ComfyUI-VoxCPM

./: .gitignore  README.md  __init__.py  pyproject.toml  pytest.ini  readme-lora-training.md  requirements.txt  voxcpm_nodes.py  voxcpm_train_nodes.py
.github/workflows/: publish.yml
autoshop-voice-front-desk/: architecture.md
autoshop-voice-front-desk/api/: webhook_contracts.md
autoshop-voice-front-desk/config/: .env.example  example_shop_config.json
autoshop-voice-front-desk/db/: campaign_schema.sql  database_schema.sql
autoshop-voice-front-desk/docs/: agent_prompt.md  dynamic_variables_spec.md  setup_instructions.md
autoshop-voice-front-desk/n8n-workflows/: callback_sla_manager.json  dms_sync_handler.json  retell_calcom_booking_tools.json  retell_inbound_router.json  retell_post_call_processor.json  shop_config_sync.json
autoshop-voice-front-desk/templates/: sms_templates.md
autoshop-voice-front-desk/tests/: test_scenarios.md
autoshop-voice-front-desk/web/: .env.example  next.config.ts  package-lock.json  package.json
example_workflows/: VoxCPM-example.json  VoxCPM-lora-training.json  VoxCPM_example.json
js/: extension.js  extension.ts  index.ts  tsconfig.json
js/components/: index.ts
js/core/: constants.ts  index.ts  logger.ts  session.ts
js/notifications/: NotificationManager.ts  index.ts  types.ts
js/types/: events.ts  index.d.ts  voxcpm.ts
js/widgets/: index.ts
modules/: custom_types.py  dataset_utils.py  device_utils.py  dtype_utils.py  generation.py  loader.py  model_info.py  patcher.py  settings.py  trainer.py  utils.py
nodes/: __init__.py  advanced_params_node.py  tts_node.py  voice_cloning_node.py
samples/: female_daenerys_prompt.txt  male_rickmorty_prompt.txt  male_stewie_prompt.txt
src/voxcpm/: cli.py  (+1 more)
tests/: test_voxcpm2_integration.py
(+69 files in other folders)
