[project]
name = "ComfyUI-VoxCPM"
description = "VoxCPM v1.5-2 TTS. Full featured nodes for expressive speech gen and true-to-life voice cloning"
version = "2.1.0"
license = {file = "LICENSE"}
dependencies = ["torch","torchaudio","transformers","safetensors","huggingface_hub","einops","addict","pydantic","simplejson","sortedcontainers","soundfile","diffusers","tqdm","bitsandbytes"]

[project.urls]
Repository = "https://github.com/wildminder/ComfyUI-VoxCPM"

[tool.comfy]
PublisherId = "wildai"
DisplayName = "VoxCPM TTS"
Icon = ""
